# lattice-momentum

./: .env.example  .gitignore  .golangci.yml  LICENSE  LINKEDIN.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/api/: main.go
cmd/backfill/: main.go
cmd/nightly/: main.go  steps.go
deployments/docker/: api.Dockerfile  backfill.Dockerfile  cron-entrypoint.sh  cron.Dockerfile
internal/api/: auth.go  auth_test.go  chart_handler.go  chart_pattern_levels.go  chart_trendlines.go  chart_types.go  cors.go  handler.go  handler_test.go  metrics_middleware.go  rank_list_handler.go
internal/bootstrap/: bootstrap.go
internal/config/: config.go  config_test.go
internal/db/: postgres.go
internal/indicators/: breadth.go  breadth_test.go  distribution_days.go  distribution_days_test.go  percentile.go  percentile_test.go  relative_strength.go  relative_strength_test.go  sma.go  sma_test.go
internal/jobs/: breadth_divergence_job.go  (+20 more)
scripts/: README.md  pyproject.toml  pytest.ini  train_premonition.py
scripts/tests/: conftest.py  test_business_cases.py  test_pure_functions.py
tv-collector/: .env.example  Dockerfile  README.md  pyproject.toml  verify_metrics.py
tv-collector/app/: __init__.py  config.py  logging_config.py  main.py  metrics.py  scheduler.py  server.py
tv-collector/app/clients/: backend_client.py  tradingview_client.py
tv-collector/app/models/: schemas.py
tv-collector/app/screeners/: audit_writer.py  episodic_pivot.py  market_leaders.py  momentum.py  stage1_filter.py  test_stage1_filter.py  test_validation.py
tv-collector/app/services/: daily_job.py  storage.py  validation.py
tv-collector/scripts/: check_requirements.py  export_cookies.py  run_screeners.py  test_fields.py  verify_auth.py
tv-collector/tests/: README.md  conftest.py  pytest.ini
tv-collector/tests/integration/: test_screener_pipeline.py
tv-collector/tests/unit/: test_audit_writer.py  test_clients.py  test_config.py  test_daily_job.py  test_episodic_pivot.py  test_market_leaders.py  test_metrics.py  test_momentum.py  test_stage1_filter.py  test_storage.py  test_validation.py
(+162 files in other folders)
