[tool.poetry]
name = "premonition-scripts"
version = "0.1.0"
description = "Premonition model training and evaluation scripts"
authors = ["Anton Davidsen <anton.davidsen@example.com>"]
readme = "README.md"
packages = [{ include = "*.py" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pandas = "^2.2"
xgboost = "^2.0"
lightgbm = "^4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"